[gd_scene load_steps=7 format=3 uid="uid://dlhxjp7t8k0cs"]

[ext_resource type="Texture2D" uid="uid://e5d4v5kp03wk" path="res://art/2a05f7c0ab7ff913d368eeb2baf59918.jpeg" id="1_5bvbt"]
[ext_resource type="Script" uid="uid://b4ua1gowkofww" path="res://scenes/grid.gd" id="4_xqmpp"]
[ext_resource type="Script" uid="uid://dvh1ecs1j2tgf" path="res://scripts/dark_holder.gd" id="5_7wq2k"]
[ext_resource type="Script" uid="uid://7x3l5tpaf5be" path="res://scripts/stone_holder.gd" id="6_5bvbt"]
[ext_resource type="Script" uid="uid://bpgwmimvxsc8f" path="res://scripts/time_holder.gd" id="7_llew5"]
[ext_resource type="Script" uid="uid://djnb3crhnuwpn" path="res://scripts/corrupt_holder.gd" id="8_r8j6e"]

[node name="game_window" type="Node2D"]

[node name="background" type="TextureRect" parent="."]
offset_left = -1.0
offset_right = 639.0
offset_bottom = 1136.0
texture = ExtResource("1_5bvbt")
expand_mode = 4
stretch_mode = 3

[node name="top_ui" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="bottom_ui" type="TextureRect" parent="."]
offset_top = 928.0
offset_right = 576.0
offset_bottom = 1020.0

[node name="grid" type="Node2D" parent="."]
script = ExtResource("4_xqmpp")
width = 6
height = 8
x_start = 64
y_start = 864
offset = 90
y_offset = 2

[node name="dark_holder" type="Node2D" parent="."]
script = ExtResource("5_7wq2k")

[node name="stone_holder" type="Node2D" parent="."]
script = ExtResource("6_5bvbt")

[node name="time_holder" type="Node2D" parent="."]
script = ExtResource("7_llew5")

[node name="corrupt_holder" type="Node2D" parent="."]
script = ExtResource("8_r8j6e")

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="damage_corrupt" from="grid" to="corrupt_holder" method="_on_grid_damage_corrupt"]
[connection signal="damage_dark" from="grid" to="dark_holder" method="_on_grid_damage_dark"]
[connection signal="damage_stone" from="grid" to="stone_holder" method="_on_grid_damage_stone"]
[connection signal="damage_time" from="grid" to="time_holder" method="_on_grid_damage_time"]
[connection signal="make_corrupt" from="grid" to="corrupt_holder" method="_on_grid_make_corrupt"]
[connection signal="make_dark" from="grid" to="dark_holder" method="_on_grid_make_dark"]
[connection signal="make_stone" from="grid" to="stone_holder" method="_on_grid_make_stone"]
[connection signal="make_time" from="grid" to="time_holder" method="_on_grid_make_time"]
[connection signal="remove_stone" from="stone_holder" to="grid" method="_on_stone_holder_remove_stone"]
[connection signal="remove_time" from="time_holder" to="grid" method="_on_time_holder_remove_time"]
[connection signal="remove_corrupt" from="corrupt_holder" to="grid" method="_on_corrupt_holder_remove_corrupt"]
[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]
